# cars-data

./: .dockerignore  .gitignore  .prettierrc.json  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  sonar-project.properties
.github/: dependabot.yml  renovate.json
.github/workflows/: app-deploy.yml  cleanup.yml  cloudformation.yml  codeql.yml  cypress.yml  data.yml  datatest.yml  deploy.yml  lambda.yml  lighthouse.yml  playwright.yml  poetry-version.yml  scan.yml  scout.yml  sonar.yml  test.yml  trigger.yml
app/: .dockerignore  .env  .npmrc  Dockerfile  biome.json  check-packages.js  cypress.config.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
app/.husky/: pre-push
app/config/: eslint.config.cjs  eslint.config.js  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: App.tsx  AppLayout.tsx  app.css  constants.ts  index.html  main.tsx  router.tsx  types.ts  utility.ts  vite-env.d.ts
app/src/i18n/: en.json  fi.json  i18n.ts  i18next.d.ts  index.ts
app/src/public/: insert-links.js
app/tests/: vitest.setup.ts
app/tests/components/: BarChart.test.tsx  Carousel.test.tsx  ChartsContainer.test.tsx  ErrorPage.test.tsx  LanguageSwitch.test.tsx  LineChart.test.tsx  Loading.test.tsx  PieChart.test.tsx  SearchableDropdown.test.tsx  ThemeSwitch.test.tsx  TopList.test.tsx  TreeMapChart.test.tsx
app/tests/cypress/: error.cy.ts  home.cy.ts
app/tests/e2e/: error.spec.ts  home.spec.ts  test.spec.ts
cloudformation/: .checkov.yml  bucket.yml  cloudfront.yml  lambda.yml  requirements.txt
cloudformation/app/: bucket.yml  cloudfront.yml
cloudformation/data/: alarm.yml  bucket.yml  cloudfront.yml  cloudwatch.yml  ecr.yml  lambda.yml  schedule.yml  trigger.yml
config/: tsconfig.json  vite.config.ts
data/: .dockerignore  Dockerfile  data.ipynb  data.json  lambda.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
data/handlers/: data.py
data/misc/: data.ipynb
data/src/: data_cleaning.py  data_import.py  data_validation.py  lambda.py  requirements.txt
data/src/processors/: imports.py  postprocesses.py  preprocesses.py
data/tests/: test_cleaning.py  test_generation.py
data/trigger/: trigger.py
lambda/: Dockerfile  requirements.txt
src/: App.tsx  constants.ts  types.ts
tests/: playwright.config.ts
tests/components/: PieChart.test.tsx  SearchableDropdown.test.tsx
util/: Dockerfile  http_server.py  requirements.txt
(+49 files in other folders)
