[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cars-data"
version = "1.0.0"
packages = [{include = "src"}]

[[tool.poetry.source]]
name = "pypi"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.main.dependencies]
numpy = "2.3.5"
pandas = "2.3.3"
pydantic = "2.12.4"

[tool.poetry.group.common.dependencies]
requests = "2.32.5"

[tool.poetry.group.aws.dependencies]
botocore = "1.41.1"
awslambdaric = "3.1.1"

[tool.poetry.group.dev.dependencies]
notebook = "7.5.0"
pip-audit = "2.9.0"
pytest = "9.0.1"
ruff = "0.14.5"

[tool.poetry.group.main]
include-groups = ["common"]

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.9.0"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
ignore = ["COM812"]
exclude = [".venv", "__pycache__"]