[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cars-data"
version = "1.0.0"
packages = [{include = "src"}]

[[tool.poetry.source]]
name = "pypi"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.main.dependencies]
numpy = "2.4.0"
pandas = "3.0.0rc1"
pydantic = "2.12.5"

[tool.poetry.group.common.dependencies]
requests = "2.32.5"

[tool.poetry.group.dev.dependencies]
notebook = "7.5.2"
pip-audit = "2.10.0"
pytest = "9.0.2"
ruff = "0.14.11"

[tool.poetry.group.main]
include-groups = ["common"]

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.9.0"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
ignore = ["COM812"]
exclude = [".venv", "__pycache__"]