[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cars-data"
version = "1.0.0"
packages = [{include = "src"}]

[[tool.poetry.source]]
name = "pypi"

[tool.poetry.dependencies]
python = "^3.13"

[solver]
min-release-age = 1

[tool.poetry.group.main.dependencies]
numpy = "2.4.6"
pandas = "3.0.3"
pydantic = "2.13.4"

[tool.poetry.group.common.dependencies]
requests = "2.34.2"

[tool.poetry.group.dev.dependencies]
notebook = "7.6.0"
pip-audit = "2.10.1"
pytest = "9.1.0"
ruff = "0.15.18"

[tool.poetry.group.main]
include-groups = ["common"]

[tool.poetry.requires-plugins]
poetry-plugin-export = "1.9.0"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
ignore = ["COM812"]
exclude = [".venv", "__pycache__"]